--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
         <header>
             <img src="imagens/super.png">
         </header>
-    <main>
-        <u></u>
-        <h3><p>BEM VINDO, ao nosso catalogo de filmes</p></h3>
-        <ul>
-            <li>PELÉ O FILME</li>
-            <p>A história de Pelé, o maior jogador de futebol de todos os tempos. De sua infância na cidade mineira de Três Corações até a consagração ao ganhar a Copa do Mundo de 1958 pelo Brasil, com apenas 17 anos.</p>
-            <li>RAMBO ATÉ O FIM</li>
-            <p>se passa décadas depois de John Rambo (Sylvester Stallone) ter lutado contra seus inimigos. Agora, ele encontrou a paz em um rancho na fronteira entre os Estados Unidos e o México. Lá ele ajuda Maria Beltran (Adriana Barraza) a criar a neta Gabrielle (Yvette Monreal), que o trata com imenso carinho. Decidida a encontrar o pai, que a abandonou ainda criança, ela conta com a ajuda de uma amiga que agora vive no México para localizá-lo. Mesmo contra a vontade da avó e de Rambo, Gabrielle parte escondida para o país vizinho e, após ser dispensada pelo próprio pai, acaba vendida para uma gangue que gerencia prostitutas. Alertado sobre o que aconteceu, Rambo decide ir até o Mèxico para salvá-la.</p>
-            <li>PICA PAU O FILME</li>
-            <p>Uma verdadeira guerra de território começa com o pássaro hiperativo quando o advogado Lance Walters e sua namorada chegam no terreno da família em meio à floresta com o desejo de destruírem tudo para construção de uma mansão. Mas para realizarem seus sonhos, terão que enfrentar as maluquices desta ave maluca que é também a última de sua espécie.</p>
-        </ul>
-        <img src="imagens/pele.jpg">
-        <img src="imagens/rambo.jpg">
-        <img src="imagens/pica pau.jpg">
-    </main>
-
+        <main>
+            <h3><p>BEM VINDO, ao nosso catalogo de filmes</p></h3>
+            <ul>
+                <li>PELÉ O FILME</li>
+                <p>A história de Pelé, o maior jogador de futebol de todos os tempos. De sua infância na cidade mineira de Três Corações até a consagração ao ganhar a Copa do Mundo de 1958 pelo Brasil, com apenas 17 anos.</p>
+                <li>RAMBO ATÉ O FIM</li>
+                <p>se passa décadas depois de John Rambo (Sylvester Stallone) ter lutado contra seus inimigos. Agora, ele encontrou a paz em um rancho na fronteira entre os Estados Unidos e o México. Lá ele ajuda Maria Beltran (Adriana Barraza) a criar a neta Gabrielle (Yvette Monreal), que o trata com imenso carinho. Decidida a encontrar o pai, que a abandonou ainda criança, ela conta com a ajuda de uma amiga que agora vive no México para localizá-lo. Mesmo contra a vontade da avó e de Rambo, Gabrielle parte escondida para o país vizinho e, após ser dispensada pelo próprio pai, acaba vendida para uma gangue que gerencia prostitutas. Alertado sobre o que aconteceu, Rambo decide ir até o Mèxico para salvá-la.</p>
+                <li>PICA PAU O FILME</li>
+                <p>Uma verdadeira guerra de território começa com o pássaro hiperativo quando o advogado Lance Walters e sua namorada chegam no terreno da família em meio à floresta com o desejo de destruírem tudo para construção de uma mansão. Mas para realizarem seus sonhos, terão que enfrentar as maluquices desta ave maluca que é também a última de sua espécie.</p>
+            </ul>
+                <img src="imagens/pele.jpg">
+                <img src="imagens/rambo.jpg">
+                <img src="imagens/pica pau.jpg">
+        </main>
         <footer>
             <h3>aproveite nossos filmes com, pipoca é recomendado<h3>
             <img src="imagens/pessoas.jpg">
+            <h5>visite nossas redes</h5>
+            <p><a href="https://https://www.netflix.com/br/" class="netflix" target="blank_"> NETFLIX</a></p>
         </footer>
     </body>
 </html>
